force-app/main/default/objects/Order_Status_History__c/Order_Status_History__c.object-meta.xml
<CustomObject>
  <label>Order Status History</label>
  <pluralLabel>Order Status Histories</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>History Number</label>
    <displayFormat>OSH-{00000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>