force-app/main/default/objects/Order_Status_History__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>MasterDetail</type>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Status_Histories</relationshipName>
    <relationshipLabel>Status History</relationshipLabel>
</CustomField>